name:                   pfad
version:                0.1.0.0
synopsis:               http://pfad.sampou.org/
description:            http://pfad.sampou.org/
license:                BSD3
license-file:           LICENSE
author:                 Nobuo Yamashita
maintainer:             nobsun@sampou.org
copyright:              (c) Hideyuki Tanaka
category:               Web
build-type:             Simple
cabal-version:          >=1.20

executable pfad
  main-is:                site.hs
  build-depends:          base >= 4.6
                        , process
                        , hakyll >= 4.5
                        , binary
  default-language:       Haskell2010

executable deploy
  main-is:                deploy.hs
  build-depends:          base >= 4.6
                        , shelly >= 1.5
                        , text >= 1.1
  default-language:       Haskell2010
